--- a/src/app/pages/muse/components/muse/muse.component.scss
+++ b/src/app/pages/muse/components/muse/muse.component.scss
@@ -1,40 +1,4 @@
 @import "./styles";
-.nav-container{
-    background-color: #0A091A;
-}
-.nav {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 0;
-    height: 128px;
-    overflow: hidden;
-    width: 95%;
-  }
-  
-.nav-item {
-    float: left;
-    line-height: 128px;
-    margin-top: 20px;
-}
-  
-.nav-link {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-.logo-stageverse{
-    position: absolute;
-    height: 60px;
-    left: 3%;
-    top: 34px;
-}
-.logo-sv{
-    height: 16vh;
-}
-.disktop-hide{
-    display: none !important;
-}
 .muse-hero{
     background-image: url(/assets/images/ui-assets/muse-hero.png);
     background-position: center;
@@ -380,115 +344,7 @@
     height:3vh;
 }
 // ---------------------------footer--------------------------------
-.social-media-footer-container{
-    display: flex;
-    flex-direction: row;
-    gap: 3.2vh;
-}
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #fff;
-    opacity: 1; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #fff;
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #fff;
-  }
-.footer-small-text{
-    width: 71%;
-}
-.logo-container{
-    margin-left: 8%;
-    width: 14%;
-    margin-top: 15vh;
-}
-.footer-social-media{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 3%;
-}
-.footer-sub-contianer{
-    margin-top: 33%;
-    width: 92%;
-}
-.search{
-    font-weight: 500;
-    width: 100%;
-    height: 80px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    box-sizing: border-box;
-    color: #fff;
-    font-size: 3.8vh;
-    border-left: 0px;
-    border-right: 0px;
-    background: #0b091a;
-}
-.input-icon{
-    border-bottom-right-radius: 40px;
-    border-top-right-radius: 40px;
-    height: 80px;
-    line-height: 86px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-left: 0px;
-    padding-right: 2vw;
-    background: #0b091a;
-}
-.leftinput{
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-right: 0px;
-    background: #0b091a;
-    width: 50px;
-    border-bottom-left-radius: 40px;
-    border-top-left-radius: 40px;
-}
-.footer-big-text{
-    margin-top: 7vh;
-    font-family: 'Druk Wide Bold';
-    letter-spacing: 0.04em;
-    line-height: 148%;
-    font-size: 2.55vw;
-    font-style: normal;
-    font-weight: normal;
-    color: #FFFFFF;
-    padding-bottom: 50px;
-}
-.footer-sub-heading{
-    font-family: 'Druk Wide Bold';
-    font-weight: 500;
-    font-size: 3.1vh;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-p-text{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2.5vh;
-    line-height: 130%;
-    margin-top: 3vh;
-    letter-spacing: -0.01em;
-}
-.footer-bottom{
-    width: 94vw;
-    margin-left: auto;
-    margin-right: auto;
-}
-.link-font{
-    font-size: 3.5vh;
-}
-.links-a{
-    color: white;
-}
-.links-a:hover{
-    // background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
-    color: #665BFF
-}
-.links-a img:hover{
-    opacity: 0.5;
-    background-size: contain;
-}
+
 // xxxxxxxxxxxxxxxxxxxxxxEnd of Footer mediaxxxxxxxxxxxxxxxxxxxxxx
 .join-our-discord{
     margin-left: 20px;
@@ -635,6 +491,14 @@
     -ms-flex-preferred-size: 50%;
     flex-basis: 50%;
 }
+.muse-social-media-top-container{
+    position: absolute;
+    left: 3.11%;
+    width: 88%;
+    top: 11.6%;
+    gap: 5vh;
+    margin-left: 20px;
+}
 // ================================================================================================================================
 //                                                  MOBILE VIEWS CSS START
 // ================================================================================================================================
@@ -780,68 +644,11 @@
     font-size: 20px;
     word-spacing: 0px;
 }
-.footer-sm{
-    margin-top: 50px;
-    flex-direction: column;
-}
-.footer-social-media{
-    flex-direction: column;
-}
-.logo-container{
-    margin-top: 0px;
-    margin-left: 5%;
-    width: 22%;
-}
-.footer-big-text{
-    font-size: 30px;
-    padding-bottom: 0px;
-}
-.footer-sub-heading{
-    font-size: 20px;
-}
-.footer-sub-contianer{
-    margin-top: 10%;
-    width: 82%;
-    margin-left: 21px;
-}
-.footer-p-text{
-    font-size: 20px;
-    margin-top: 40px;
-}
-.footer-small-text{
-    width: 85%;
-    font-size: 20px;
-}
-.input-icon{
-    height: 50px;
-    line-height: 60px;
-    padding-right: 5vw;
-}
-.search{
-    height: 50px;
-    font-size: 20px;
-}
-.social-media-footer-container{
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-.social-media-footer{
-    padding-right: 30px;
-}
 .h3{
     font-size: 26px;
     line-height: 30px;
     letter-spacing: 1px;
     font-feature-settings: 'ss02' on;
-}
-.nav{
-    height: 67px;
-}
-.logo-stageverse{
-    height: 27px;
-    left: 20px;
-    top: 20px;
-
 }
 
 .title-container{
