--- a/src/app/pages/terms/terms.component.html
+++ b/src/app/pages/terms/terms.component.html
@@ -1,42 +1,79 @@
 <div>
     <div class="nav-container">
         <ul class="nav">
-            <li class="nav-item"> 
-                <a routerLink="/"  class="nav-link">
-                    
+            <li class="nav-item">
+                <a routerLink="/" class="nav-link">
+
                     <img src="assets/images/ui-assets/Lockup.png" class="logo-stageverse" alt="Logo" />
-                </a> 
+                </a>
             </li>
-            <li class="nav-item sm-hide"  style="display: flex;gap: 1px; float:right">
-                <a  class="nav-link" >
+            <li class="nav-item sm-hide" style="display: flex;gap: 1px; float:right">
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/apple-button.png" style="height: 60px;">
                 </a>
-                <a  class="nav-link">
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/android-button.png" style="height: 60px;">
                 </a>
-                <a  class="nav-link" >
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/ring.png" style="height: 60px;">
                 </a>
             </li>
-            <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;" (click)="menu=!menu"><a href="javascript:void(0);"  class="nav-link">
-                <img src="/assets/images/ui-assets/menu-icon.png" style="height: 50px;" />
-            </a></li>
-           <!-- <li class="nav-item"><a href="#" class="nav-link">Home</a></li> -->
+            <li class="nav-item disktop-hide" style="float: right !important; margin-top: -15px;" (click)="menu=!menu">
+                <a *ngIf="menu==false" href="javascript:void(0);" class="nav-link">
+                    <img src="/assets/images/ui-assets/menu-icon.png" style="height: 50px;" />
+                </a>
+                <a *ngIf="menu==true" href="javascript:void(0);" class="nav-link">
+                    <img src="/assets/images/ui-assets/menu-icon-expand.png" style="height: 50px;" />
+                </a>
+            </li>
         </ul>
 
         <ul *ngIf="menu==true" class="nav-mobile">
-            
-            <li class="nav-item-mobile" >
-                <a [routerLink]=""  action="early-access"  class="nav-link" >
+
+            <div class="logo-container">
+                <h1 class="footer-big-text">
+                    <li><a routerLink="/careers" class="links-a">CAREERS</a></li>
+                    <li><a routerLink="/creators" class="links-a">CREATORS</a></li>
+                    <li><a routerLink="/press" class="links-a">PRESS</a></li>
+                    <li><a routerLink="/company" class="links-a">COMPANY</a></li>
+                    <li><a routerLink="/blog" class="links-a">BLOG</a></li>
+                    <li><a routerLink="/support" class="links-a">SUPPORT</a></li>
+                </h1>
+            </div>
+
+            <div class="content footer madam">
+                <app-footer></app-footer>
+            </div>
+
+            <li class="nav-item-mobile">
+
+
+
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/apple-button.png" style="height: 40px;">
                 </a>
-                <a [routerLink]=""  action="early-access"  class="nav-link">
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/android-button.png" style="height: 40px;">
                 </a>
-                <a [routerLink]=""  action="early-access" class="nav-link" >
+                <a [routerLink]=""   class="nav-link">
                     <img src="/assets/images/ui-assets/ring.png" style="height: 40px;">
                 </a>
             </li>
+
+            <div class="social-media-footer-container term-social-media-top-container">
+                <a href="https://www.instagram.com/stageverse" target="blank" class="social-media-footer links-a"><img
+                        src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                <a href=" https://discord.com/invite/uhMjf7sF6Z" target="blank" class="social-media-footer links-a"><img
+                        src="assets/images/ui-assets/panda.png" alt="social icon"></a>
+                <a href="https://www.linkedin.com/company/stageverse" target="blank"
+                    class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png"
+                        alt="linkedIn icon"></a>
+                <a href="https://twitter.com/thestageverse" target="blank" class="social-media-footer links-a"><img
+                        src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/Frame1846.svg"
+                        alt="twitter icon"></a>
+            </div>
+            <div class="footer-copyright copy-right-pos">© 2021 Stage, Inc.</div>
         </ul>
     </div>
     <div class="body">
@@ -103,7 +140,7 @@
                 <a href="#" > <img src="/assets/images/ui-assets/ios-btn.png" class="download-img-btn" /></a>
                 <a href="#" ><img src="/assets/images/ui-assets/android-btn.png" class="download-img-btn" /></a>
                 <a href="#" ><img src="/assets/images/ui-assets/quest-btn.png" class="download-img-btn" /></a>
-                <h2 class="donwnload-sub-text">comming soom to mac and pc</h2>
+                <h2 class="donwnload-sub-text">comming soon to mac and pc</h2>
             </div>
         </div>
         <div>
@@ -157,7 +194,7 @@
         <div>
             <div class="example-collection-grid footer-sm">
                 <div class="example-collection-cell">
-                    <div class="example-collection-item" >
+                    <div class="example-collection-item">
                         <div class="logo-container">
                             <img class="footer-logo" src="assets/images/ui-assets/Logo-comb.png" />
                             <h1 class="footer-big-text">
@@ -167,48 +204,69 @@
                                 <li><a routerLink="/company" class="links-a">COMPANY</a></li>
                                 <li><a routerLink="/blog" class="links-a">BLOG</a></li>
                                 <li><a routerLink="/support" class="links-a">SUPPORT</a></li>
-                                 </h1>
+                            </h1>
                         </div>
                     </div>
                 </div>
                 <div class="example-collection-cell">
-                    <div class="example-collection-item" >
-                     <div class="footer-sub-contianer">
-                        <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
-                        <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective of people, creators, communities and brands. The collective use Stageverse to socialize, connect, create, discover, grow, elevate creativity and move culture forward.</p>
+                    <div class="example-collection-item">
+                        <div class="footer-sub-contianer">
+                            <h2 class="footer-sub-heading">FUTURE CULTURE HAPPENS HERE.</h2>
+                            <p class="footer-p-text">Stageverse is an NFT-based metaverse of beautifully designed 3D
+                                spaces, called Stages, that aims to connect a vibrant, diverse and pioneering collective
+                                of people, creators, communities and brands. The collective use Stageverse to socialize,
+                                connect, create, discover, grow, elevate creativity and move culture forward.</p>
 
-                    <div style="display: flex;flex-direction: row; margin-top: 7vh;">
+                            <div class="footer-input-position">
 
-                    <div class="leftinput" >
+                                <div class="leftinput">
 
-                    </div>
+                                </div>
 
-                           <div style="width: 100%;">
-                        <input type="text" class="search" placeholder="Get News & Updates"/>
-                    </div>
-                        <div class="input-icon" ><img src="assets/images/ui-assets/arrow-white.png"/></div>
-                    </div>
-                        <div class="footer-social-media">
-                            <div class="footer-small-text">
-                                <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" class="links-a" style="text-decoration: underline;">Terms of Service</a> and Stageverse <a routerLink="/privacy" class="links-a" style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe at any time.</p>
-
+                                <div style="width: 100%;">
+                                    <input type="text" class="search" placeholder="Get News & Updates" />
+                                </div>
+                                <div class="input-icon"><img src="assets/images/ui-assets/arrow-white.png" /></div>
                             </div>
-                            <div class="social-media-footer-container">
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                            <div class="footer-social-media">
+                                <div class="footer-small-text">
+                                    <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a
+                                            routerLink="/terms-of-service" class="links-a"
+                                            style="text-decoration: underline;">Terms of Service</a> and Stageverse <a
+                                            routerLink="/privacy" class="links-a"
+                                            style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe
+                                        at any time.</p>
 
+                                </div>
+                                <div class="social-media-footer-container footer-social-align">
+                                    <a href="https://www.instagram.com/stageverse" target="blank"
+                                        class="social-media-footer links-a"><img
+                                            src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                                    <a href=" https://discord.com/invite/uhMjf7sF6Z" target="blank"
+                                        class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png"
+                                            alt="social icon"></a>
+                                    <a href="https://www.linkedin.com/company/stageverse" target="blank"
+                                        class="social-media-footer links-a"><img
+                                            src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
+                                    <a href="https://twitter.com/thestageverse" target="blank"
+                                        class="social-media-footer links-a"><img
+                                            src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                                    <a href="#" class="social-media-footer links-a"><img
+                                            src="assets/images/ui-assets/Frame1846.svg" alt="twitter icon"></a>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-<div class="content footer footer-mt" >
-    <app-footer></app-footer>
-</div>
+    <div class="content footer footer-mt">
+        <app-footer></app-footer>
+        <div class="footer-copyright copy-right-bottom mobile">© 2021 Stage, Inc.</div>
+
+
+    </div>
+
 </div>
