--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -17,9 +17,6 @@
 );
     height: 23%;
 }
-.nav-container{
-    background-color: #0A091A;
-}
 .culture-1{
     display: flex;
     flex-direction: row;
@@ -50,57 +47,7 @@
     background-position: center;
     background-repeat: no-repeat;
 }
-.nav {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 0;
-    height: 128px;
-    overflow: hidden;
-    width: 95%;
-  }
-  
-.nav-item {
-    float: left;
-    line-height: 128px;
-    margin-top: 20px;
-}
-  
-.nav-link {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-.logo-stageverse{
-    position: absolute;
-    height: 60px;
-    left: 3%;
-    top: 34px;
-}
-.logo-sv{
-    height: 16vh;
-}
-.nav-mobile{
-    height: 100vh;
-    width: 370px;
-    margin: 0px auto;
-    list-style-type: none;
-    overflow: hidden;
-}
-.nav-item-mobile{
-    display: flex;
-    gap: 1px;
-    line-height: 60px;
-    float: left;
-    margin-top: -50px;
-    margin-left: 18px;
-}
-.mobile{
-    display: none;
-}
-.disktop-hide{
-    display: none !important;
-}
+
 .download-container{
     display: none;
 }
@@ -290,30 +237,6 @@
     letter-spacing: 0.1em;
     text-transform: uppercase;
 }
-.example-collection-grid {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-right: -5px;
-    margin-left: -5px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-}
 .what-happen{
 
     background-image:
@@ -374,30 +297,7 @@
       padding-top: 66px;
      margin-left: 6%;
   }
-  .example-collection-cell {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      padding: 10px;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-pack: start;
-      -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
-      justify-content: flex-start;
-      -webkit-box-align: stretch;
-      -webkit-align-items: stretch;
-      -ms-flex-align: stretch;
-      align-items: stretch;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-      -ms-flex: 1;
-      flex: 1;
-  }
+  
   .muse{
       background-image: url('/assets/images/ui-assets/center-stage.png');
       background-position: center;
@@ -495,7 +395,7 @@
   }
   .stageverse-content{
       position: relative;
-      top: 57vh;
+      top: 58.5vh;
   
   }
   
@@ -515,13 +415,10 @@
 .overlay {
     position: absolute;
     z-index: 1;
-    background: linear-gradient( 
-0deg
- , rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 70.17%, rgba(0, 0, 0, 0) 100%);
-    transform: rotate( 
-0deg
- );
-    padding-bottom: 75px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 70.17%, rgba(0, 0, 0, 0) 100%);
+    transform: rotate(0deg);
+    padding-bottom: 42px;
+    padding-left: 30px;
 }
   .stageverse-1{
       background-image: url('/assets/images/ui-assets/video-1.gif');
@@ -633,194 +530,23 @@
     width: 80%;;
 
 }
-.example-collection-item {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-}
-.example-collection-grid.nested {
-    margin-top: -5px;
-    margin-bottom: -5px;
-}
-.example-collection-cell._1of2 {
-    -webkit-flex-basis: 50%;
-    -ms-flex-preferred-size: 50%;
-    flex-basis: 50%;
-}
 .stage-heading{
     
     font-weight: bold;
-    font-size: 1.60rem;
-    line-height: 3rem;
+    font-size: 21px;
+    line-height: 4rem;
     text-transform: uppercase;
     padding-left: 40px;
 
 }
 .stage-paragraph{
     font-weight: normal;
-    font-size: 1.33rem;
+    font-size: 24px;
     letter-spacing: 0;
-    line-height: 1.7rem;
-    width: 80.9%;
+    line-height: 2.4rem;
+    width: 83%;
     margin-left: 40px;
 }
-// ===================================footer===============================
-.social-media-footer-container{
-    display: flex;
-    flex-direction: row;
-    gap: 3.2vh;
-    margin-left: 1vh;
-}
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #fff;
-    opacity: 1; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #fff;
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #fff;
-  }
-
-.footer-small-text{
-    width: 71%;
-}
-.logo-container{
-    margin-left: 8%;
-    width: 14%;
-    margin-top: 15vh;
-}
-.footer-social-media{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 3%;
-}
-.footer-sub-contianer{
-    margin-top: 33%;
-    width: 92%;
-}
-.search{
-    font-weight: 500;
-    width: 100%;
-    height: 80px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    box-sizing: border-box;
-    color: #fff;
-    font-size: 3.8vh;
-    border-left: 0px;
-    border-right: 0px;
-    background: #0b091a;
-}
-.input-icon{
-    border-bottom-right-radius: 40px;
-    border-top-right-radius: 40px;
-    height: 80px;
-    line-height: 86px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-left: 0px;
-    padding-right: 2vw;
-    background: #0b091a;
-}
-.leftinput{
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-right: 0px;
-    background: #0b091a;
-    width: 50px;
-    border-bottom-left-radius: 40px;
-    border-top-left-radius: 40px;
-}
-.footer-big-text{
-    margin-top: 7vh;
-    font-family: 'Druk Wide Bold';
-    letter-spacing: 0.04em;
-    line-height: 148%;
-    font-size: 2.55vw;
-    font-style: normal;
-    font-weight: normal;
-    color: #FFFFFF;
-    padding-bottom: 50px;
-}
-.footer-sub-heading{
-    font-family: 'Druk Wide Bold';
-    font-weight: 500;
-    font-size: 3.1vh;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-p-text{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2.5vh;
-    line-height: 130%;
-    margin-top: 3vh;
-    letter-spacing: -0.01em;
-}
-.footer-mt{
-    margin-top: 120px; 
-    background: rgba(0, 0, 0, 0.5);
-}
-.footer-bottom{
-    width: 94vw;
-    margin-left: auto;
-    margin-right: auto;
-}
-.link-font{
-    font-size: 3.5vh;
-}
-.links-a{
-    color: white;
-}
-.links-a:hover{
-    // background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #0A091A;
-    color: #665BFF
-}
-.links-a img:hover{
-    opacity: 0.5;
-    // color: blueviolet;
-
-    background-size: contain;
-}
-
-.about{
-    float: left;
-    margin-left: 2rem;
-    margin-top: -6.4rem;
-    font-size: 1.3rem;
-    letter-spacing: 0;
-    line-height: 1.686rem;
-}
-
-.sum{
-    color: #0A091A !important;
-}
-.sum:hover{
-    color: #0A091A !important;
-}
-.sum img:hover{
-    opacity: 0.5 !important;
-    
-}
-// =============End of Footer css =======================================
 // ==================================================mobile view css=================================================>>>>>>>>>>>>>>
 // On screens that are 600px or less, set the css property
 @media screen and (max-width: 600px) {
@@ -851,44 +577,6 @@
     width: 40%;
     margin-left: 5%;
 
-}
-
-.mari{
-    font-size: 15px;
-    letter-spacing: 0;
-    line-height: 1.629rem;
-    float: none;
-    margin-top: 25rem;
-    margin-left: 15px;
-    opacity: 0.5;
-}
-
-.mar{
-    font-size: 15px;
-    letter-spacing: 0;
-    line-height: 1.629rem;
-    float: none;
-    margin-top: -6rem;
-    margin-left: 1px;
-    opacity: 0.8;
-    padding-top: 12px;
-}
-
-.lov{
-    position: absolute;
-    left: 3.11%;
-    right: -40.47%;
-    top: 7.99%;
-    bottom: 19.64%;
-    display: flex;
-    gap: 3.2vh;
-}
-
-.madam{
-    background: none;
-    padding-left: 18px;  
-    margin-top: -34px;
-    opacity: 0.5;
 }
 
 .left-image-text-title{
@@ -1030,9 +718,11 @@
     background-size: cover;
 }
 .stageverse-content{
-    top: 58vh;
-    padding-right: 52px;
+    top: 58.5vh;
     margin-left: -3px;
+    padding-left: 6px;
+    padding-right: 45px;
+    padding-bottom: 73px;
 }
 .stageverse-text{
     width: 230px ;
@@ -1079,15 +769,6 @@
     line-height: 30px;
     letter-spacing: 1px;
     font-feature-settings: 'ss02' on;
-}
-.nav{
-    height: 67px;
-}
-.logo-stageverse{
-    height: 27px;
-    left: 20px;
-    top: 20px;
-
 }
 .what-happen{
     height: 60vh;
@@ -1144,9 +825,6 @@
 .btn-position{
     top: 5vh;
 }
-.sm-hide{
-    display: none !important;
-}
 .culture-1{
     flex-wrap: wrap;
     flex-direction: column;
@@ -1166,74 +844,11 @@
     background-image: none;
 }
 // -------------------Footer CSS---------------------------------------
-.footer-sm{
-    margin-top: 50px;
-    flex-direction: column;
-}
-.footer-social-media{
-    flex-direction: column;
-}
-.logo-container{
-    margin-top: 0px;
-    margin-left: 5%;
-    width: 22%;
-}
-.footer-big-text{
-    font-size: 30px;
-    padding-bottom: 0px;
-}
-.footer-sub-heading{
-    font-size: 20px;
-}
-.footer-sub-contianer{
-    margin-top: 10%;
-    width: 82%;
-    margin-left: 21px;
-}
-.footer-p-text{
-    font-size: 20px;
-    margin-top: 40px;
-}
-.footer-small-text{
-    width: 85%;
-    font-size: 20px;
-}
-.input-icon{
-    height: 50px;
-    line-height: 60px;
-    padding-right: 5vw;
-}
-.search{
-    height: 50px;
-    font-size: 20px;
-}
-.social-media-footer-container{
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-.footer-mt{
-    margin-top: 40px;
-    opacity: 0.5;
-}
-.ali{
-    position: absolute;
-    left: 3.11%;
-    right: -40.47%;
-    top: 97.3%;
-    bottom: 19.64%;
-    display: flex;
-    gap: 6.2vh;
-    margin-top: 40px;
-}
 
-.nife{
-    margin-bottom: 50px;
-}
 
 // ========end of footer mobile css============
-.margin-bottom{
-    margin-bottom: 15px;
-}
+
+
 .image-width{
     width: 95%;
 }
