--- a/src/app/pages/privacy/privacy.component.scss
+++ b/src/app/pages/privacy/privacy.component.scss
@@ -1,40 +1,5 @@
 @import "./styles";
-.nav-container{
-    background-color: #0A091A;
-}
-.nav {
-    list-style-type: none;
-    margin: 0;
-    padding-top: 0;
-    height: 128px;
-    overflow: hidden;
-    width: 95%;
-  }
-  
-.nav-item {
-    float: left;
-    line-height: 128px;
-    margin-top: 20px;
-}
-  
-.nav-link {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-}
-.logo-stageverse{
-    position: absolute;
-    height: 60px;
-    left: 3%;
-    top: 34px;
-}
-.logo-sv{
-    height: 16vh;
-}
-.disktop-hide{
-    display: none !important;
-}
+
 .hero-image{
     background-image: url('/assets/images/ui-assets/privacy-cover.png');
     background-position: center;
@@ -43,6 +8,7 @@
     background-size: 100% 100%;
 
 }
+
 .hero-text{
     font-family: 'Druk Wide Bold';
     font-weight: bold;
@@ -69,7 +35,6 @@
     flex: 1;
 }
 .paragraph{
-    font-family: Circular Std;
     font-style: normal;
     font-weight: normal;
     font-size: 3.7vh;
@@ -118,7 +83,7 @@
     background: rgba(255, 255, 255, 0.1);
 }
 .p-y-10{
-    padding: 1.7vh 0vh;
+    padding: 1vh 0vh;
 }
 
 .left-image-text-btn{
@@ -130,6 +95,7 @@
     line-height: 110%;
     color: #0A091A;
     padding: 10px 31px;
+
 }
 
 .left-image-text-btn img{
@@ -180,125 +146,16 @@
     line-height: 130%;
     text-transform: uppercase;
 }
-// ==============footer==================================================
-.social-media-footer-container{
-    display: flex;
-    flex-direction: row;
-    gap: 3.2vh;
+.download-container{
+    display: none;
 }
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #fff;
-    opacity: 1; /* Firefox */
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #fff;
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #fff;
-  }
-
-.footer-small-text{
-    width: 71%;
-}
-.logo-container{
-    margin-left: 8%;
-    width: 14%;
-    margin-top: 15vh;
-}
-.footer-social-media{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 3%;
-}
-.footer-sub-contianer{
-    margin-top: 33%;
-    width: 92%;
-}
-.search{
-    font-weight: 500;
-    width: 100%;
-    height: 80px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    box-sizing: border-box;
-    color: #fff;
-    font-size: 3.8vh;
-    border-left: 0px;
-    border-right: 0px;
-    background: #0b091a;
-}
-.input-icon{
-    border-bottom-right-radius: 40px;
-    border-top-right-radius: 40px;
-    height: 80px;
-    line-height: 86px;
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-left: 0px;
-    padding-right: 2vw;
-    background: #0b091a;
-}
-.leftinput{
-    border: 1px solid rgba(255, 255, 255, 0.45);
-    border-right: 0px;
-    background: #0b091a;
-    width: 50px;
-    border-bottom-left-radius: 40px;
-    border-top-left-radius: 40px;
-}
-.footer-big-text{
-    margin-top: 7vh;
-    font-family: 'Druk Wide Bold';
-    letter-spacing: 0.04em;
-    line-height: 148%;
-    font-size: 2.55vw;
-    font-style: normal;
-    font-weight: normal;
-    color: #FFFFFF;
-    padding-bottom: 50px;
-}
-.footer-sub-heading{
-    font-family: 'Druk Wide Bold';
-    font-weight: 500;
-    font-size: 3.1vh;
-    line-height: 130%;
-    letter-spacing: -0.01em;
-}
-.footer-p-text{
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2.5vh;
-    line-height: 130%;
-    margin-top: 3vh;
-    letter-spacing: -0.01em;
-}
-.footer-mt{
-    margin-top: 120px; 
-    background: rgba(0, 0, 0, 0.5);
-}
-.footer-bottom{
-    width: 94vw;
-    margin-left: auto;
-    margin-right: auto;
-}
-.link-font{
-    font-size: 3.5vh;
-}
-.links-a{
-    color: white;
-}
-.links-a:hover{
-    // background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
-    color: #665BFF
-}
-.links-a img:hover{
-    opacity: 0.5;
-    background-size: contain;
-}
-// ==============footer end==================
 .join-our-discord{
     margin-left: 20px;
 }
+// ============footer======================
+
+
+// ========End footer =========
 .p{
     font-style: normal;
     font-weight: bold;
@@ -368,89 +225,13 @@
     position: relative;
     top: 37%;
 }
-.example-collection-grid {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin-right: -5px;
-    margin-left: -5px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-}
-.example-collection-cell {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 5px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-}
-.example-collection-item {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
-    -ms-flex: 1 0 auto;
-    flex: 1 0 auto;
-    border-radius: 4px;
-}
-.example-collection-grid.nested {
-    margin-top: -5px;
-    margin-bottom: -5px;
-}
-.example-collection-cell._1of2 {
-    -webkit-flex-basis: 50%;
-    -ms-flex-preferred-size: 50%;
-    flex-basis: 50%;
-}
-.download-container-hide{
-    display: none !important;
+.privacy-social-media-top-container{
+    position: absolute;
+    left: 3.11%;
+    width: 88%;
+    top: 16%;
+    gap: 5vh;
+    margin-left: 20px;
 }
 // ==================================================mobile view css=================================================>>>>>>>>>>>>>>
 // On screens that are 600px or less, set the css property
@@ -459,6 +240,7 @@
 .sm-hide{
      display: none !important;
 }
+
 .disktop-hide{
     display: block !important;
 }
@@ -471,6 +253,10 @@
 }
 .h-2{
     font-size: 3vh;
+    line-height: 4.6vh;
+}
+.p-y-30{
+    padding: 8vh 2vh;
 }
 .title-sm{
     font-size: 14px;
@@ -504,6 +290,7 @@
 .container-links{
     margin-left: 0px;
     margin-top: 3vh;
+    padding: 5vh 2.5vh;
 }
 .download-container{
     display: block !important;
@@ -536,75 +323,15 @@
     font-size: 20px;
     word-spacing: 0px;
 }
-// ============mobile foooter================================
-.footer-sm{
-    margin-top: 50px;
-    flex-direction: column;
-}
-.footer-social-media{
-    flex-direction: column;
-}
-.logo-container{
-    margin-top: 0px;
-    margin-left: 5%;
-    width: 22%;
-}
-.footer-big-text{
-    font-size: 30px;
-    padding-bottom: 0px;
-}
-.footer-sub-heading{
-    font-size: 20px;
-}
-.footer-sub-contianer{
-    margin-top: 10%;
-    width: 82%;
-    margin-left: 21px;
-}
-.footer-p-text{
-    font-size: 20px;
-    margin-top: 40px;
-}
-.footer-small-text{
-    width: 85%;
-    font-size: 20px;
-}
-.input-icon{
-    height: 50px;
-    line-height: 60px;
-    padding-right: 5vw;
-}
-.search{
-    height: 50px;
-    font-size: 20px;
-}
-.social-media-footer-container{
-    margin-top: 40px;
-    margin-bottom: 30px;
-}
-.footer-mt{
-    margin-top: 40px;
-}
-.social-media-footer{
-    padding-right: 30px;
-}
-// =============end mobile footer======================
+// ===========mobile viw footer=============
+
+// ============End mobile footer
 .h3{
     font-size: 26px;
     line-height: 30px;
     letter-spacing: 1px;
     font-feature-settings: 'ss02' on;
 }
-.nav{
-    height: 67px;
-}
-.logo-stageverse{
-    height: 27px;
-    left: 20px;
-    top: 20px;
-
-}
-
 .title-container{
     margin-top: 4.5vh;
     width: 86%;
