--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,9 +2,12 @@
   <div class="footer-bottom">
    
     <ul class="nav-links">
-      <li *ngIf="!isReducedView">
-        <a [routerLink]="['/company']" >Contact</a>
-      </li>
+      <!-- <li *ngIf="!isReducedView">
+        <a [routerLink]="['/company']" >Company</a>
+      </li> -->
+        <li *ngIf="!isReducedView">
+          <a [routerLink]="['/']" >Contact</a>
+        </li>
       <!-- <li *ngIf="!isReducedView">
         <a href="https://medium.com/stageverse" target="_blank" data-g-event="link"
           data-g-label="Blog">Blog</a>
@@ -29,7 +32,7 @@
     
     
 
-    <div class="footer-copyright hide-mobile-xs">© 2021 Stage, Inc.</div>
+    <div class="footer-copyright  hide-mobile-xs">© 2021 Stage, Inc.</div>
     
   </div>
 </footer>
